# otomo

./: .gitignore  LICENSE  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  _fixcsv.py  _fixcsv2.py  _fixcsv3.py  pyproject.toml
backend/otomo/: __init__.py  auth.py  claim_verifier.py  cli.py  config.py  discord_bot.py  factory.py  llm.py  mcp_server.py  notifications.py  obs.py  profile.py  quota.py  security_context.py  session_store.py  share.py  subscription_read.py  subscriptions.py  trajectory.py  uploads.py  weekly.py  weekly_daemon.py
backend/otomo/agent/: __init__.py  _common.py  adaptive.py  compaction.py  contracts.py  langgraph_runner.py  plan_execute.py  prompts.py  react.py  registry.py  tool_router.py
backend/otomo/api/: __init__.py  app.py
backend/otomo/data/: NOTICE.md  curated_indices.json  i2i_anime.json  semantic_index.npz
backend/otomo/eval/: __init__.py  generate.py  rejection_sampling.py  runner.py  verifier.py
backend/otomo/memory/: __init__.py  consolidate.py  models.py  runtime.py  store.py
backend/otomo/tools/: __init__.py  _cache.py  _concurrency.py  _rag.py
backend/otomo/tools/anilist/: __init__.py  tool.py
backend/otomo/tools/animethemes/: __init__.py  tool.py
backend/otomo/tools/aspect_profile/: __init__.py  tool.py
backend/otomo/tools/bangumi/: __init__.py  client.py  models.py  tools.py
backend/otomo/tools/calendar/: __init__.py  tool.py
backend/otomo/tools/comments/: __init__.py  tool.py
backend/otomo/tools/community/: __init__.py  tool.py
backend/otomo/tools/curation/: __init__.py  tool.py
backend/otomo/tools/discovery/: __init__.py  tool.py
backend/otomo/tools/erogamescape/: __init__.py  tool.py
backend/otomo/tools/explorer/: __init__.py  tool.py
backend/scripts/: build_eval_users.py  build_semantic_index.py  eval_recommend.py  export_trajectories.py  pixiv_token.py  simulate_users.py  smoke_http.py  smoke_vlm.py  train_ltr.py
backend/tests/: test_auth.py  test_calendar_tool.py  test_claim_trajectory.py  test_external_sources.py  test_f2_f3_eval.py  test_guardrail_fixes.py  test_guidance_and_review.py  test_memory.py  test_multimodal_tool.py  test_phase6_recommendation.py  test_phase7_content_tools.py  test_quota_and_notifications.py  test_rejection_sampling.py  test_security_and_persistence.py  test_session_store.py  test_share_source_subscriptions.py  test_smoke.py  test_surface_state.py  test_watch_release_phase18.py  test_writeback.py
recsys-offline/: README.md  kaggle.json  pyproject.toml  requirements.txt
recsys-offline/recsys_offline/: __init__.py  bangumi_collect.py  bangumi_data.py  baseline.py  data.py  metrics.py  run_bangumi_cf.py  run_baseline.py  run_s1.py  run_s2.py  split.py
recsys-offline/tests/: test_metrics.py
(+115 files in other folders)
