[project]
name = "otomo-backend"
version = "0.1.0"
description = "Otomo (番组搭子) — ACGN Knowledge-Graph Agent backend"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]
rag = [
    # RAG 第二刀（hybrid + reranker）；不装则自动降级到 bigram 词法检索。
    # torch 建议装 CPU 版：pip install torch --index-url https://download.pytorch.org/whl/cpu
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2",
]
obs = [
    # 可选 Langfuse 上报（配 LANGFUSE_* 才生效；不装则只用本地 trace JSONL）
    "langfuse>=2.0",
]

[project.scripts]
otomo = "otomo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["otomo"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
